<resources>
    <string name="app_name">Focus Start Android</string>
    <string name="welcome_start_btn">Старт</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_title_1">Курс валют</string>
    <string name="welcome_title_2">Обмен валют</string>
    <string name="welcome_title_3">Список валют</string>
    <string name="welcome_subtitle_1">Мониторь курс валют</string>
    <string name="welcome_subtitle_2">Меняй валюту на другую</string>
    <string name="welcome_subtitle_3">Изучай все возможные валюты</string>
    <string name="Denomination">Номинал</string>
    <string name="Name">Название</string>
    <string name="Cost">Стоимость</string>
    <string name="Previous">Предыдущая стоимость</string>
    <string name="convert_rubles">Конвертировать в рубли</string>
    <string name="exchangeable_currency">Обмениваемая валюта</string>
    <string name="ru">Рубли</string>
    <string name="enter_the_amount">Введите сумму</string>
    <string name="convert">Конвертировать</string>
    <string name="you_get">Вы получите:</string>
</resources>